--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@angular/router": "~7.1.0",
     "bootstrap": "4.1.1",
     "core-js": "^2.5.4",
+    "express": "^4.17.1",
     "ngx-bootstrap": "^5.1.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "typescript": "~3.1.6"
+    "typescript": "~3.1.6",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.11.0",
